<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
	 <PreferenceCategory
            android:title="@string/details">
            
	      <EditTextPreference
                android:key="name"
                android:title="@string/name"
                android:dialogTitle="@string/name" />

      
         <ListPreference
                android:key="sex"
                android:title="@string/sex"
                android:summary="@string/summary_sex"
                android:entries="@array/sex"
                android:entryValues="@array/sex_value"
                android:dialogTitle="@string/sex" />

    </PreferenceCategory>
    
	  <PreferenceCategory
            android:title="@string/settings">
         
         	  <CheckBoxPreference
                android:key="sendsms"
                android:title="@string/title_sendsms"
                android:summary="@string/summary_sendsms" />
        
	  </PreferenceCategory>
</PreferenceScreen>
